--- a/GOTB.WebUI/GOTB.WebUI.csproj
+++ b/GOTB.WebUI/GOTB.WebUI.csproj
@@ -152,13 +152,16 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HtmlHelpers\PagingHelpers.cs" />
+    <Compile Include="Infrastructure\Abstract\IAuthProvider.cs" />
     <Compile Include="Infrastructure\CartHelperMethods.cs" />
     <Compile Include="Infrastructure\CartProvider.cs" />
+    <Compile Include="Infrastructure\FormsAuthProvider.cs" />
     <Compile Include="Infrastructure\ICartProvider.cs" />
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
     <Compile Include="Models\CharacterConstants.cs" />
     <Compile Include="Models\CharacterViewModel.cs" />
     <Compile Include="Models\FilterModels.cs" />
+    <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\PagingInfo.cs" />
     <Compile Include="Models\CharactersListViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
