--- a/GOTB.WebUI/Web.config
+++ b/GOTB.WebUI/Web.config
@@ -24,6 +24,9 @@
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
+      <credentials passwordFormat="Clear">
+        <user name="admin" password="secret" />
+      </credentials>
     </authentication>
     <pages>
       <namespaces>
