--- a/GOTB.WebUI/GOTB.WebUI.csproj
+++ b/GOTB.WebUI/GOTB.WebUI.csproj
@@ -156,8 +156,10 @@
     <Compile Include="Infrastructure\CartHelperMethods.cs" />
     <Compile Include="Infrastructure\CartProvider.cs" />
     <Compile Include="Infrastructure\FormsAuthProvider.cs" />
-    <Compile Include="Infrastructure\ICartProvider.cs" />
+    <Compile Include="Infrastructure\Abstract\ICartProvider.cs" />
+    <Compile Include="Infrastructure\Abstract\IWeekProvider.cs" />
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
+    <Compile Include="Infrastructure\WeekProvider.cs" />
     <Compile Include="Models\CharacterConstants.cs" />
     <Compile Include="Models\CharacterViewModel.cs" />
     <Compile Include="Models\FilterModels.cs" />
