--- a/GOTB.WebUI/Web.config
+++ b/GOTB.WebUI/Web.config
@@ -25,7 +25,10 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880">
         <credentials passwordFormat="Clear">
-          <user name="admin" password="secret" />
+          <user name="a" password="secret" />
+          <user name="b" password="secret" />
+          <user name="c" password="secret" />
+          <user name="d" password="secret" />
         </credentials>
       </forms>
     </authentication>
