--- a/GOTB.Domain/GOTB.Domain.csproj
+++ b/GOTB.Domain/GOTB.Domain.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Entities\Character.cs" />
     <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\UserProfile.cs" />
+    <Compile Include="Entities\Vote.cs" />
+    <Compile Include="Entities\VoteItem.cs" />
     <Compile Include="Entities\VoteType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
