--- a/GOTB.Domain/GOTB.Domain.csproj
+++ b/GOTB.Domain/GOTB.Domain.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Abstract\ICharacterRepository.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EfCharacterRepository.cs" />
+    <Compile Include="Abstract\IVoteRepository.cs" />
+    <Compile Include="Concrete\VoteDBRepository.cs" />
     <Compile Include="Entities\Character.cs" />
     <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\UserProfile.cs" />
