--- a/GOTB.UnitTests/GOTB.UnitTests.csproj
+++ b/GOTB.UnitTests/GOTB.UnitTests.csproj
@@ -62,6 +62,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="FunctionalTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
