--- a/GOTB.WebUI/GOTB.WebUI.csproj
+++ b/GOTB.WebUI/GOTB.WebUI.csproj
@@ -264,6 +264,7 @@
     <Content Include="Views\Cart\Manage.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Cart\SubmitButton.cshtml" />
+    <None Include="Views\Account\UserNameView.cshtml" />
     <None Include="Views\Home\CharacterInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
