--- a/GOTB.WebUI/GOTB.WebUI.csproj
+++ b/GOTB.WebUI/GOTB.WebUI.csproj
@@ -265,6 +265,7 @@
     <Content Include="Views\Cart\Manage.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Cart\SubmitButton.cshtml" />
+    <None Include="Views\Account\AdminPanel.cshtml" />
     <None Include="Views\Account\UserNameView.cshtml" />
     <Content Include="Views\CharacterEdit\Create.cshtml" />
     <Content Include="Views\CharacterEdit\Delete.cshtml" />
