--- a/GOTB.WebUI/GOTB.WebUI.csproj
+++ b/GOTB.WebUI/GOTB.WebUI.csproj
@@ -278,6 +278,7 @@
     <None Include="Views\Home\CharacterInfo.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Enum_fields.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\IsAlive.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Gender.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
